# alchemy-azure-devops

./: README.md  azure-pipelines.yml  pyproject.toml
.github/pipelines/: sync-github-repo.yaml
Docker/: Dockerfile  index.html
alchemy/: __init__.py  cli.py
pipelines/: CI-pipeline.yaml  main.yaml  parameter_example.yaml
tests/: conftest.py  test_cli.py
