[build-system]
# Specify the build system and dependencies required for building the project
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
# Define the project metadata
name = "alchemy"
description = "Alchemy tool"
authors = []
requires-python = ">= 3.10"
readme = "README.md"
license = {file = "LICENSE"}

# List the project dependencies
dependencies = [
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0"
]

# Specify dynamic versioning
dynamic = ["version"]

[project.optional-dependencies]
# Define optional dependencies for the project
docs = [
    "sphinx>=7.3.7",
    "sphinx_design>=0.5.0",
    "sphinx_mdinclude>=0.6.0"
]

[tool.hatch.version]
# Specify the versioning source tool
source = "versioningit"

[tool.versioningit.next-version]
# Define the versioning method
method = "smallest"


[tool.versioningit.format]
# Define the format for the versioningit tool
distance = "{next_version}.dev{distance}"
dirty = "{next_version}.dev{distance}"
distance-dirty = "{next_version}.dev{distance}"

[tool.hatch.metadata]
# Specify dynamic metadata fields for Hatch
dynamic = ["version"]

[project.scripts]
# Define the entry point for the alchemy CLI
alchemy = "alchemy.cli:main"